--- a/samples/lazarus/Samples.lpi
+++ b/samples/lazarus/Samples.lpi
@@ -45,12 +45,12 @@
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="modules\jhonson\src;modules\horse\src;..\..\src"/>
+      <OtherUnitFiles Value="..\..\src;modules\.dcp;modules\.dcu;modules;modules\horse\src;modules\jhonson\src"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
   </CompilerOptions>
   <Debugging>
-    <Exceptions Count="3">
+    <Exceptions Count="4">
       <Item1>
         <Name Value="EAbort"/>
       </Item1>
@@ -60,6 +60,9 @@
       <Item3>
         <Name Value="EFOpenError"/>
       </Item3>
+      <Item4>
+        <Name Value="EResNotFound"/>
+      </Item4>
     </Exceptions>
   </Debugging>
 </CONFIG>
